# cdp-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-core.yml  release-protocol.yml  release.yml  security-audit.yml
crates/cdp-core/: Cargo.toml  README.md
crates/cdp-core/docs/: API_REFERENCE.md  EXAMPLE_COVERAGE_GAPS.md  FEATURES.md  GETTING_STARTED.md  MANUAL_EXAMPLES.md
crates/cdp-core/docs/features/: NETWORK.md  SCREENSHOTS.md  WAIT_FUNCTIONS.md
crates/cdp-core/docs/howto/: FORM_AUTOMATION.md  WEB_SCRAPING.md
crates/cdp-core/examples/: advanced_features.rs  api_browser_page.rs  api_element_frame_input.rs  api_emulation_accessibility_tracing.rs  api_events_local.rs  api_live_amazon.rs  api_live_fedex.rs  api_network_local.rs  api_output_capture.rs  api_storage_session.rs  basic.rs  comprehensive.rs  concurrent_contexts.rs  events.rs  network.rs  page_close.rs  runtime_console_events.rs  screencast.rs  storage_and_sessions.rs
crates/cdp-core/examples/support/: mod.rs
crates/cdp-core/src/: accessibility.rs  command.rs  domain_manager.rs  emulation.rs  error.rs  lib.rs  session.rs  tracing.rs
crates/cdp-core/src/browser/: discovery.rs  launcher.rs  manager.rs  mod.rs  ws_endpoints.rs
crates/cdp-core/src/input/: keyboard.rs  mouse.rs
crates/cdp-core/src/network/: control.rs  cookies.rs  mod.rs  network_control.rs  network_intercept.rs
crates/cdp-core/src/page/: element.rs  frame.rs  mod.rs  page_core.rs  session.rs
crates/cdp-core/src/storage/: manager.rs
crates/cdp-core/src/transport/: cdp_protocol.rs  command.rs  event_parser.rs  mod.rs  websocket_connection.rs
crates/cdp-core/test-assets/: comprehensive-test.html
crates/cdp-core/tests/: page_close.rs  send_futures.rs
crates/cdp-protocol/: Cargo.toml  README.md
crates/cdp-protocol/src/: accessibility.rs  animation.rs  audits.rs  autofill.rs  background_service.rs  bluetooth_emulation.rs  browser.rs  cache_storage.rs  cast.rs  console.rs  css.rs  debugger.rs  device_access.rs  device_orientation.rs  dom.rs  dom_debugger.rs  dom_snapshot.rs  dom_storage.rs  emulation.rs  event_breakpoints.rs  extensions.rs  fed_cm.rs  fetch.rs  file_system.rs  headless_experimental.rs  heap_profiler.rs  indexed_db.rs  input.rs  inspector.rs  io.rs  layer_tree.rs  lib.rs  log.rs  media.rs  memory.rs  mod.rs  network.rs  overlay.rs  page.rs  performance.rs  (+17 more)
