[workspace]
resolver = "3"
members = ["crates/cdp-core", "crates/cdp-protocol"]
default-members = ["crates/cdp-core", "crates/cdp-protocol"]

[workspace.package]
license = "MIT"
readme = "README.md"
authors = ["Edison Wong <wbrikor@outlook.com>"]
rust-version = "1.85.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
url = "2.3"
regex = "1.11"
rand = "0.9"
base64 = "0.22"
tracing = "0.1.43"
async-trait = "0.1.89"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
anyhow = "1.0"
