[workspace]
resolver = "3"
members = ["crates/cdp-core", "crates/cdp-protocol"]
default-members = ["crates/cdp-core", "crates/cdp-protocol"]

[workspace.package]
license = "MIT"
readme = "README.md"
authors = ["Edison Wong <wbrikor@outlook.com>"]
rust-version = "1.85.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
tokio-stream = { version = "0.1.18", features = ["full"] }
futures-util = "0.3.32"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
url = "2.5.8"
regex = "1.12.3"
rand = "0.10"
base64 = "0.22"
tracing = "0.1.44"
async-trait = "0.1.89"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
anyhow = "1.0"
derive_builder = "0.20.2"
