[package]
authors = ["Edison Wong <wbrikor@outlook.com>"]
name = "cdp-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oh0123/cdp-rs"
homepage = "https://github.com/oh0123/cdp-rs"
description = "Implementation of chrome devtools protocol"
keywords = [
    "cdp",
    "chrome",
    "devtools",
    "protocol",
    "rust",
    "browser",
    "automation",
]
categories = ["web-programming", "api-bindings"]

[lib]
name = "cdp_core"
path = "src/lib.rs"

[dependencies]
cdp-protocol = { version = "0.1.0", path = "../cdp-protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[features]

[dev-dependencies]
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
