[package]
name = "cdp-protocol"
authors = ["Edison Wong <wbrikor@outlook.com>"]
version = "0.3.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oh0123/cdp-rs"
homepage = "https://github.com/oh0123/cdp-rs"
description = "A Rust implementation of the Chrome DevTools Protocol"
keywords = ["cdp", "devtools", "protocol", "rust", "browser"]
categories = ["web-programming", "api-bindings"]

[lib]
name = "cdp_protocol"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
